# Copyright (C) 2016 Opera Software ASA.  All rights reserved.
#
# This file is an original work developed by Opera Software ASA

import("//build/config/opera-common.gni")

source_set("bitmap") {
  sources = [
    "op_scanline_ops.c",
    "op_scanline_ops.h",
    "scale.h",
  ]

  configs += [ "$opera/mobile/mobile/build:include_config" ]
}
